fixed the image issue on ios. also fixed ios issue where clicking on an image would flicker and not open the lightbox

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -326,12 +326,8 @@ u::-moz-selection {
   }
 }
 
-.imageGalleryItem {
-  @apply object-fill w-full h-full rounded-3xl;
-}
-
 .lightbox {
-  @apply top-0 left-0 w-screen h-screen z-50 fixed justify-center;
+  @apply w-screen h-screen z-50 fixed;
 }
 
 .pdfBtn {
